<resources>
    <string name="app_name">StartedSeviceLifeCycle</string>
    <string name="start_service">Start Service</string>
    <string name="stop_service">Stop Service</string>
    <string name="tutorial_parte_2">Tutorial Part 2</string>
    <string name="title_activity_second_tutorial">SecondTutorialActivity</string>
    <string name="tutorial_parte_3">Tutorial Part 3</string>
    <string name="tutorial_01">Tutorial 01</string>
    <string name="tutorial_02">Tutorial 02</string>
    <string name="tutorial_03">Iniciar Tutorial 3</string>
    <string name="title_activity_tutorial3">Tutorial3Activity</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="n_mero_1">Número 1</string>
    <string name="n_mero_2">Número 2</string>
    <string name="text_soma">+</string>
    <string name="text_subtracao">-</string>
    <string name="text_multiplicacao">x</string>
    <string name="text_divisao">/</string>
    <string name="resultado">Resultado</string>
</resources>
