<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context=".activity.MainActivity"
        android:orientation="vertical">

        <TextView
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/tutorial_01"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <LinearLayout
            android:id="@+id/tutorial01"
            android:layout_alignParentTop="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <Button
                android:id="@+id/btStartService"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/start_service"
                />

            <Button
                android:id="@+id/btStopService"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/stop_service"
                />
        </LinearLayout>

        <TextView
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/tutorial_02"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <LinearLayout
            android:id="@+id/tutorial02"
            android:layout_alignParentTop="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/bt2StopService"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/stop_service"
                />
        </LinearLayout>


        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/colorAccent"
            />

        <Button
            android:id="@+id/btTutorial3"
            android:text="@string/tutorial_03"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />

    </LinearLayout>
</ScrollView>